# p2_ponce_digiugno

./: CMakeLists.txt  README.md  package.xml  submission.txt
launch/: nav_part.launch  p2b.launch
maps/: jakedavid.pgm  jakedavid.yaml
misc/: README.md  message.txt
script/: color_tracker.py  goal_sequence.py
